# openjarvis

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.yaml  package-lock.json  package.json  project.md  run.sh  todo.md
.issues/stash/: Issue-1775354479581.2.md  failed-to-call-llm-provider.1.md  mcp-server-connection-failed-for-demo_http.0.md
.lesson/: active-memory-keywords-group-by-file.md
.lessons/: ark-invalid-tool-call-id.md  openai-toolcall.md
.openjarvis/memory/active/: jjj_preference.md
.openjarvis/obswiki/: AGENTS.md  index.md
.openjarvis/obswiki/.obsidian/: workspace.json
.openjarvis/obswiki/raw/: obsidian-cli-smoke-notes.md  openjarvis-subagent-notes.md
.openjarvis/obswiki/schema/: README.md  wiki-page-template.md
.openjarvis/obswiki/wiki/: cli-test-workflow.md  openjarvis-obswiki-overview.md
.skills/local_smoke_test/: SKILL.md  reference.md
.skills/local_smoke_test/templates/: checklist.md
ability/: browser.md  claude-skill.md  memory.md  sandbox.md
acceptance/: features-support.md  postgresql-topic-queue.md
agent-doc/: agent-loop-refact-plan.md  agent.md  architecture.md  context-session-thread.md  feishu.md  openai-response-api.md  session-thread-refact.md  target.md
arch/: README.md  _.md  chrome-browser-automation.md  hook.md  mcp.md  prd.md  router-timeout-report.md  sandbox.md  skill.md  system-gap-report.md  system.md  tools.md
config/: agents.yaml  capabilities.yaml  postgresql.example.yaml
config/openjarvis/: mcp.json  memory.yaml
model/: README.md  agent-loop.md  agent.md  auto-compactor.md  channel.md  command.md  compact.md  context.md  feature.md  llm.md  memory.md  prompt.md  router.md  session.md  thread.md
model/agent/: README.md  hook.md  loop.md  runtime.md  sandbox.md  tool.md  worker.md
model/agent/tool/: browser.md  command-session-manual.md  mcp.md  skill.md  toolset.md
observation/aria-snapshot/: README.md  rust-snapshot-diff.md
observation/aria-snapshot/ai-baidu/: README.md
observation/aria-snapshot/baidu/: README.md  capture_baidu_aria.mjs
observation/aria-snapshot/bilibili-persist/: README.md  capture_bilibili_persist.mjs
observation/aria-snapshot/rust-snapshot-compare/: README.md
resources/: command_session_sum_tui.py
rule/: agent-loop-refact.md
scripts/: browser_ai_snapshot_parse.rs  browser_baidu_aria_observe.rs  browser_bilibili_persist_observe.rs  browser_bilibili_search_dump.rs  browser_sidecar.mjs  command_session_manual.rs  feishu_attachment_probe.rs  feishu_ws_client.mjs  llm_provider_ping.rs  llm_test.rs  memory_search_probe.rs  openai_responses_ping.rs  skill_frontmatter_dump.rs  tool_schema_dump.rs
src/: agent.rs  attachment_syntax.rs  cli.rs  command.rs  config.rs  context.rs  lib.rs  llm.rs  logging.rs  main.rs  mod.md  model.rs  router.rs  session.rs  thread.rs
src/agent/: agent_loop.rs  hook.rs  mcp.rs  mod.md  mod.rs  runtime.rs  sandbox.rs  subagent.rs  worker.rs
src/agent/feature/: memory_ex.rs  (+3 more)
src/channels/: feishu.rs  mod.md  mod.rs
src/cli_command/: internal.rs  mod.rs  skill.rs
src/compact/: budget.rs  manager.rs  mod.md  mod.rs  provider.rs  runtime.rs  strategy.rs
src/context/: mod.md  mod.rs  token_kind.rs
src/queue/: mod.rs  schema.sql
src/skill/: mod.rs
src/thread/: agent.rs
tests/: agent.rs  agent_test.rs  attachment_syntax.rs  browser_bilibili_search_dump.rs  channels_test.rs  cli.rs  cli_command.rs  command.rs  compact_test.rs  config.rs  context.rs  context_test.rs  feature_runtime.rs  lib.rs  llm.rs  logging.rs  main.rs  model.rs  queue_test.rs  router.rs  router_timeout_root_cause.rs  session.rs  session_store_test.rs  skill.rs  skill_frontmatter_dump.rs  thread.rs
tests/agent/: agent_loop.rs  feature.rs  hook.rs  mcp.rs  mod.rs  runtime.rs  sandbox.rs  subagent.rs  worker.rs
tests/channels/: feishu.rs  mod.rs
tests/compact/: budget.rs  manager.rs  mod.rs  provider.rs  runtime.rs  strategy.rs
tests/context/: mod.rs  token_kind.rs
tests/queue/: mod.rs
tests/support/: fake-bwrap.sh  mod.rs
todo/: refact.md
todos/: backgroud-task.md  subagent-multi-agent-design.md  tool-role-unification.md  tool-support.md
(+315 files in other folders)
