[package]
name = "openjarvis"
version = "0.1.0"
edition = "2024"
default-run = "openjarvis"

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.33.1", default-features = false, features = ["chat-completion", "chat-completion-types", "rustls"] }
async-trait = "0.1.89"
axum = { version = "0.8.6", default-features = false, features = ["http1", "json", "tokio"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.2.0", features = ["client", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
schemars = { version = "0.8.21", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }

[[bin]]
name = "llm_test"
path = "scripts/llm_test.rs"

[[bin]]
name = "browser_bilibili_search_dump"
path = "scripts/browser_bilibili_search_dump.rs"
